--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Java"]
 	path = Java
 	url = https://github.com/yash0patel/java.git
+[submodule "spring"]
+	path = spring
+	url = https://github.com/yash0patel/spring.git
