Add JavaScript as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "python"]
 	path = python
 	url = https://github.com/yash0patel/python.git
+[submodule "JavaScript"]
+	path = JavaScript
+	url = https://github.com/yash0patel/javascript.git
