Add express-api as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "React.js"]
 	path = React.js
 	url = https://github.com/yash0patel/React.js.git
+[submodule "express-api"]
+	path = express-api
+	url = https://github.com/yash0patel/express-api.git
