--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "django"]
 	path = django
 	url = https://github.com/yash0patel/django.git
+[submodule "java"]
+	path = java
+	url = https://github.com/yash0patel/java
